name:                   vector-rope
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/vector-rope

category:               Data
synopsis:               Ropes implemented on top of Vectors
description:            Ropes implemented on top of Vectors

source-repository head
  type:                 git
  location:             https://github.com/mokus0/vector-rope.git

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Vector.Rope
  other-modules:        Data.Vector.Rope.FTUtils
                        Data.Vector.Rope.MeasuredVec
  build-depends:        base >= 3 && < 5,
                        fingertree,
                        vector
